--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "astro/tsconfigs/base"
+  "extends": "astro/tsconfigs/strict",
+  "display": "theme/sleek",
+  "compilerOptions": {
+    "types": ["astro/client"],
+    "baseUrl": "."
+  }
 }
